<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <!--ConstraintLayout chosen to allow for more sophisticated
    arrangement of fields (although it's simple right now, a better
    version would be more visually interesting) -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_instructions_label"
        android:text="@string/instr_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="36sp"
 />

        <TextView
            android:id="@+id/text_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_instructions_label"
            android:textSize="24sp"/>

        <Button
            android:id="@+id/btn_to_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_shoes_btn_label"
            app:layout_constraintTop_toBottomOf="@id/text_instructions"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>