<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!--ConstraintLayout chosen to allow for more sophisticated
arrangement of fields (although it's simple right now, a better
version would be more visually interesting) -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.example.shoestore.WelcomeFragment">


        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subhead"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@id/text_welcome" />

        <Button
            android:id="@+id/btn_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instr_btn_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_subhead" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>