<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--ConstraintLayout chosen to allow for more sophisticated
    arrangement of views and control of spacing -->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoestore.LoginFragment">


    <TextView
        android:id="@+id/text_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/email_label"
     />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email_label"
         />


    <TextView
        android:id="@+id/text_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_email"
        />


    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="12dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password_label"/>

    <Button
        android:id="@+id/button_new_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_login"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_password"/>

    <Button
        android:id="@+id/button_existing_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_user"
        android:layout_margin="12dp"
        app:layout_constraintStart_toEndOf="@id/button_new_login"
        app:layout_constraintTop_toBottomOf="@id/editText_password"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>