<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <!--ConstraintLayout chosen here because there are a lot
    of fields of varying width and the defaults of LinearLayout
    would result in a less clear presentation -->


    <data>
        <variable
            name="shoe"
            type="com.example.shoestore.models.Shoe" />

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <TextView
        android:id="@+id/text_shoe_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/shoe_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="?attr/textAppearanceListItem" />


    <TextView
        android:id="@+id/text_shoe_name"
        android:text="@{shoe.name}"
        tools:text="@string/test"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@id/text_shoe_name_label"
        app:layout_constraintTop_toTopOf="@id/text_shoe_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/text_shoe_company_label"
        app:layout_constraintTop_toBottomOf="@id/text_shoe_name_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/company"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/text_shoe_company"
        android:text="@{shoe.company}"
        tools:text="@string/test"
        app:layout_constraintStart_toStartOf="@id/text_shoe_name"
        app:layout_constraintTop_toTopOf="@id/text_shoe_company_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/text_shoe_size_label"
        app:layout_constraintTop_toBottomOf="@id/text_shoe_company_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/size"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/text_shoe_size"
        app:layout_constraintStart_toStartOf="@id/text_shoe_name"
        tools:text="@string/test"
        app:layout_constraintTop_toTopOf="@id/text_shoe_size_label"
        android:text="@{Double.toString(shoe.size)}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/text_shoe_desc_label"
        app:layout_constraintTop_toBottomOf="@id/text_shoe_size_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/desc"
        android:textAppearance="?attr/textAppearanceListItem" />
    <TextView
        android:id="@+id/text_shoe_desc"
        app:layout_constraintStart_toStartOf="@id/text_shoe_name"
        tools:text="@string/test"
        app:layout_constraintTop_toTopOf="@id/text_shoe_desc_label"
        android:text="@{shoe.description}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/text_shoe_img_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_shoe_desc_label"
        android:text="@string/images"
        android:layout_margin="16dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_shoe_images"
        android:text="@{shoe.imagesText}"
        tools:text="@string/test"
        app:layout_constraintTop_toTopOf="@id/text_shoe_img_label"
        app:layout_constraintStart_toStartOf="@id/text_shoe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>