<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.shoestore.NewShoeFragment">
    <data>
        <variable
            name="shoe"
            type="com.example.shoestore.models.Shoe" />
        <variable
            name="shoeList"
            type="com.example.shoestore.models.ShoeListViewModel" />
    </data>

<!-- ConstraintLayout because...
"avoiding nested view groups, which allows to improve performance and simplify the structure" -->
<!-- ASLFDJKAP;WOIJF9A[O';WJFI;OAW JEFO;SD
Made ShoeViewModel, added a couple references in NewShoeFragment and one in here -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/text2_shoe_name"
                android:text="@string/shoe_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                />

        <EditText
            android:id="@+id/edit_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toBottomOf="@id/text2_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text2_shoe_name" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2_shoe_name"
                android:id="@+id/text2_size"
                android:text="@string/size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                />
            <EditText
                android:id="@+id/edit_shoe_size"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text2_size"
                app:layout_constraintBottom_toBottomOf="@id/text2_size"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2_size"
                android:id="@+id/text2_company"
                android:text="@string/company"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                />
            <EditText
                android:id="@+id/edit_company"
                android:text="@={shoe.company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text2_company"
                app:layout_constraintBottom_toBottomOf="@id/text2_company"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2_company"
                android:layout_marginTop="16dp"
                android:id="@+id/text2_description"
                android:text="@string/desc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <EditText
                android:id="@+id/edit_description"
                android:text="@={shoe.description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text2_description"
                app:layout_constraintBottom_toBottomOf="@id/text2_description"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2_description"
                android:id="@+id/text2_images"
                android:text="@string/images"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                />
            <EditText
                android:id="@+id/edit_images"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text2_images"
                app:layout_constraintBottom_toBottomOf="@id/text2_images"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2_images"
                android:id="@+id/btn_save_new_shoe"
                android:text="@string/save"
                android:onClick="@{() -> shoeList.addShoe(shoe)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                app:layout_constraintStart_toEndOf="@id/btn_save_new_shoe"
                app:layout_constraintTop_toTopOf="@id/btn_save_new_shoe"
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>